--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,7 @@ main {
   font-weight: bold;
   font-size: 2rem;
 }
+
 .nav-menu {
   display: flex;
   justify-content: space-between;
@@ -98,6 +99,7 @@ main {
 }
 .hobby-img-block {
   max-width: 700px;
+  max-height: 900px;
 }
 .hobby-img-block img {
   width: 100%;
@@ -194,4 +196,30 @@ input:focus {
 .input-group input {
   display: flex;
   justify-content: center;
+}
+.btn-change-img-hobby{
+  background-color: #27418b;
+  color: #ffffff;
+  border: none;
+  padding: 15px;
+  border-radius: 10px;
+  font-weight: 600;
+  margin-top: 1rem;
+  transition: all 200ms ease;
+}
+.btn-change-img-hobby:hover{
+  background-color: #4466c5;
+}
+
+.dark-theme {
+  background-color: #121212;
+  color: #ffffff;
+}
+.btn-toggle-theme {
+  margin-top: 10px;
+  padding: 10px 15px;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 10px;
+  float: right;
 }
