--- a/style/style.less
+++ b/style/style.less
@@ -46,6 +46,7 @@ header, main{
 .title-container{
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   .title-text-container{
     text-align: center;
